# verry

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE.txt  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  wheels.yml
_sources/reference/: affine.rst.txt  autodiff.rst.txt  function.rst.txt  index.rst.txt  interval.rst.txt  intervalseries.rst.txt  linalg.rst.txt  optimize.rst.txt  typing.rst.txt
_sources/userguide/: index.rst.txt
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: class.rst
docs/source/reference/: integrate.rst  misc.rst
docs/source/userguide/: pitfall.rst
reference/: affine.html  autodiff.html  function.html  index.html  integrate.html  interval.html  intervalseries.html  linalg.html  misc.html  optimize.html  typing.html
src/verry/: __init__.py  affine.py  function.py  intervalseries.py  typing.py
src/verry/autodiff/: __init__.py  _dual.py  autodiff.py  dual.py
src/verry/integrate/: __init__.py  dde.py  integrator.py  quad.py  solver.py  tracker.py  utility.py  vareqenclosure.py  vareqsolver.py
src/verry/interval/: CMakeLists.txt  __init__.py  _floatoperator.cpp  _floatoperator.pyi  floatinterval.py  interval.py
src/verry/linalg/: __init__.py  floatintervalmatrix.py  intervalmatrix.py
src/verry/misc/: __init__.py  formatspec.py
src/verry/optimize/: __init__.py  optimize.py  rootfinding.py
tests/: test_affinevar.py  test_autodiff.py
tests/integrate/: test_solver.py
tests/interval/: test_floatinterval.py
tests/optimize/: test_rootfinding.py
userguide/: index.html  pitfall.html
